exchange implementation added