@@ -121,6 +121,39 @@
                             </versionInfo>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>exchangeClient</id>
+                        <phase>package</phase>
+                        <goals><goal>launch4j</goal></goals>
+                        <configuration>
+                            <headerType>console</headerType>
+                            <outfile>target/listFirst.exe</outfile>
+                            <jar>target/idsmail-1.0-SNAPSHOT-jar-with-dependencies.jar</jar>
+                            <errTitle>exchangeClient</errTitle>
+                            <classPath>
+                                <mainClass>pl.com.ids.exchange.ListFirstSubject</mainClass>
+                                <addDependencies>true</addDependencies>
+                                <preCp>anything</preCp>
+                            </classPath>
+                            <jre>
+                                <minVersion>1.8.0</minVersion>
+                                <opts>
+                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
+                                </opts>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>1.2.3.4</fileVersion>
+                                <txtFileVersion>txt file version?</txtFileVersion>
+                                <fileDescription>a description</fileDescription>
+                                <copyright>my copyright</copyright>
+                                <productVersion>4.3.2.1</productVersion>
+                                <txtProductVersion>txt product version</txtProductVersion>
+                                <productName>E-N-C-C</productName>
+                                <internalName>ccne</internalName>
+                                <originalFilename>original.exe</originalFilename>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
 
 					</executions>
             </plugin>
@@ -176,6 +209,11 @@
           <groupId>com.icegreen</groupId>
           <artifactId>greenmail</artifactId>
           <version>1.5.0</version>
+      </dependency>
+      <dependency>
+          <groupId>com.microsoft.ews-java-api</groupId>
+          <artifactId>ews-java-api</artifactId>
+          <version>2.0</version>
       </dependency>
   </dependencies>
 </project>
